[package]
name = "canonical-swap"
version = "0.1.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "canonical_swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-security-txt = "1.0.1"
